# pdfgridcat

./: LICENSE  README.md  pyproject.toml
dev/: test_cli.py
src/pdfgridcat/: __init__.py  cli.py
