[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfgridcat"
version = "1.0.0"
description = "Arrange multiple PDF pages into a grid without scaling or margins"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Katsutoshi Seki"}
]
keywords = ["pdf", "pypdf", "concat", "grid", "tile"]
dependencies = ["pypdf>=4.0.0"]
requires-python = ">=3.8"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

[project.scripts]
pdfgridcat = "pdfgridcat.cli:main"

[project.urls]
Homepage = "https://github.com/sekika/pdfgridcat"
